/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-06-02 11:50 UTC+0200 Aleksander Czajczynski (hb fki.pl)
  * examples/edit1.prg
    ! inputInt, inputDouble have no min/max value defined,
      width of the control does not prevent this (Data width
      error possible)

  * cimgui-common/hbcombow.prg
    + extended hb_igComboText() editable combo box input widget
      variant with optional hint message

2025-06-02 12:07 UTC+0200 Aleksander Czajczynski (hb fki.pl)
  + examples/edit1.prg
    + .dbf table/grid editing example with Dear Imgui widgets

  * cimgui-common/hbctcalw.prg
    ! hb_igDatePicker() fix: with empty date in supplied variable
      start picking today, not on year 0

    ! hb_igDatePicker( <cLabel> ) fix for non printable labels
      starting with "##", causing "+" igButton's contained in this
      widget to stop working

  * examples/runner.prg
    * on startup don't try to load a file with drag-and-drop mode enable
    ; work-in-progress: they are not really loaded at all

  * sokol/hbsokol.c
    + SAPP_IS_FULLSCREEN() -> <lFull>, SAPP_TOGGLE_FULLSCREEN()

  * ChangeLog.txt
    - removed a TODO (done)

2025-02-25 17:50 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * cimgui-docking/hbimgui.cpp
  * cimgui-docking/hbimstru.ch
    + ImGuiWindowClassStruct struct, available here with
      ImGui 1.85+, seems useful with advanced docking window
      setups

  * cimgui/hbimstru.ch
  * cimgui-docking/hbimstru.ch
    ! correct ImGuiIO_ConfigWindowsMoveFromTitleBarOnly identifier,
      last character was missing

2025-02-22 22:24 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * cimgui/hbimgui.cpp
  * cimgui-docking/hbimgui.cpp
    * regenerated using updated version of the generator.prg

    * igDockBuilderSplitNode() out parameters of type ImGuiID passed