@@ -3,6 +3,18 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-06-07 14:56 UTC+0200 Aleksander Czajczynski (hb fki.pl)
+  * examples/runner.prg
+    ! fix "type file.hrb | runner -" pipe starting too slow
+      on some Windows machine, always truncated on 4176 bytes,
+      also due to some C RTL stdio buffering
+
+    * changed remaining Left() -> hb_BLeft()
+
+  * cimgui-docking/hbimgui.cpp
+  * cimgui/hbimgui.cpp
+    + ImGuiStyle( igGetStyle() ):ScaleAllSizes( <nFactor> )
+
 2025-06-02 11:50 UTC+0200 Aleksander Czajczynski (hb fki.pl)
   * examples/edit1.prg
     ! inputInt, inputDouble have no min/max value defined,
